--- a/ej2.ipynb
+++ b/ej2.ipynb
@@ -14,14 +14,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import Counter \n",
-    "text= \"\"\" hola Problemas mundos imaginarios uy incosciente como estan todos. hola esto es una prueba de python\n",
-    "hola. como ya saben probleMas mundos\n",
+    "text=  \"\"\"NumPy is the fundamental package for scientific computing with Python.\n",
+    "\n",
+    "Website: https://www.numpy.org\n",
+    "Documentation: https://numpy.org/doc\n",
+    "Mailing list: https://mail.python.org/mailman/listinfo/numpy-discussion\n",
+    "Source code: https://github.com/numpy/numpy\n",
+    "Contributing: https://www.numpy.org/devdocs/dev/index.html\n",
+    "Bug reports: https://github.com/numpy/numpy/issues\n",
+    "Report a security vulnerability: https://tidelift.com/docs/security\n",
+    "It provides:\n",
+    "\n",
+    "a powerful N-dimensional array object\n",
+    "sophisticated (broadcasting) functions\n",
+    "tools for integrating C/C++ and Fortran code\n",
+    "useful linear algebra, Fourier transform, and random number capabilities\n",
+    "Testing:\n",
+    "\n",
+    "NumPy requires pytest and hypothesis. Tests can then be run after installation with:\n",
+    "\n",
+    "python -c \"import numpy, sys; sys.exit(numpy.test() is False)\"\n",
+    "Code of Conduct\n",
+    "NumPy is a community-driven open source project developed by a diverse group of contributors. The NumPy leadership has made a strong commitment to creating an open, inclusive, and positive community. Please read the NumPy Code of Conduct for guidance on how to interact with others in a way that makes our community thrive.\n",
+    "\n",
+    "Call for Contributions\n",
+    "The NumPy project welcomes your expertise and enthusiasm!\n",
+    "\n",
+    "Small improvements or fixes are always appreciated. If you are considering larger contributions to the source code, please contact us through the mailing list first.\n",
+    "\n",
+    "Writing code isn’t the only way to contribute to NumPy. You can also:\n",
+    "\n",
+    "review pull requests\n",
+    "help us stay on top of new and old issues\n",
+    "develop tutorials, presentations, and other educational materials\n",
+    "maintain and improve our website\n",
+    "develop graphic design for our brand assets and promotional materials\n",
+    "translate website content\n",
+    "help with outreach and onboard new contributors\n",
+    "write grant proposals and help with other fundraising efforts\n",
+    "For more information about the ways you can contribute to NumPy, visit our website. If you’re unsure where to start or how your skills fit in, reach out! You can ask on the mailing list or here, on GitHub, by opening a new issue or leaving a comment on a relevant issue that is already open.\n",
+    "\n",
+    "Our preferred channels of communication are all public, but if you’d like to speak to us in private first, contact our community coordinators at numpy-team@googlegroups.com or on Slack (write numpy-team@googlegroups.com for an invitation).\n",
+    "\n",
+    "We also have a biweekly community call, details of which are announced on the mailing list. You are very welcome to join.\n",
+    "\n",
+    "If you are new to contributing to open source, this guide helps explain why, what, and how to successfully get involved.\n",
     " \"\"\"\n",
+    "\n",
     "\n",
     "words=text.split()\n",
     "\n",
@@ -38,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,14 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "la palabra que mayor cantidad de veces aparece es: problemas y aparece 2 veces\n"
+      "la palabra que mayor cantidad de veces aparece es: numpy y aparece 6 veces\n"
      ]
     }
    ],
